src/test/test-models/good/random_init_var_context.stan
transformed data {
  vector[2] y;
}
parameters {
  real mu1;
  real mu2;
  ordered[3] theta[2];
}
model {
}
