src/test/test-models/bad/data_index/non_data_index7.stan
parameters {
  real y[3];

}
transformed parameters {
  ordered[size(y)] z;
}
